<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_artist_filter">Enter artist information here</string>
    <string name="imageViewSpotifyArtist">Spotify artist</string>
    <string name="spotify_stream_imageview_artist">Spotify artist image</string>
    <string name="spotify_streamer_artist_tagline" />
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="search_title">Search</string>
    <string name="no_internet">Please check internet connection</string>
    <string name="artist_search_hint">Enter artist name</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spotify_streamer_artist_image">Artist Image</string>
    <string name="spotify_streamer_artist_track">New Text</string>
    <string name="spotify_streamer_artist_album" />
    <string name="spotify_streamer_artist">Artist</string>
    <string name="spotify_streamer_album">Album</string>
    <string name="spotify_streamer_start_time">0:00</string>
    <string name="spotify_streamer_end_time">0.30</string>
    <string name="spotify_streamer_title">Title</string>
    <string name="spotify_media_fforward">Fast Forward</string>
    <string name="spotify_media_play">Play</string>
    <string name="spotify_media_rewind">Rewind</string>
</resources>
