<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingLeft="5dp"
android:paddingRight="5dp"
android:paddingTop="5dp"
android:paddingBottom="5dp"
tools:context=".MainActivity">
<TextView android:text="@string/spotify_streamer_artist" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/textviewMediaArtist"
    android:textSize="35sp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/spotify_streamer_album"
    android:id="@+id/textviewMediaAlbum"
    android:textSize="25sp"
    android:textIsSelectable="true"
    android:singleLine="false"
    android:layout_below="@+id/textviewMediaArtist"
    android:layout_centerHorizontal="true" />
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imageviewMediaAlbum"
    android:src="@drawable/coldplay_parachutes"
    android:layout_below="@+id/textviewMediaAlbum"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="21dp" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/spotify_streamer_end_time"
    android:id="@+id/endTime"
    android:singleLine="true"
    android:layout_above="@+id/seekBar"
    android:layout_alignRight="@+id/seekBar"
    android:layout_alignEnd="@+id/seekBar" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/spotify_streamer_start_time"
    android:id="@+id/startTime"
    android:layout_above="@+id/seekBar"
    android:layout_alignRight="@+id/button4"
    android:layout_alignEnd="@+id/button4" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_toEndOf="@+id/startTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/spotify_streamer_title"
    android:id="@+id/textviewMediaTitle"
    android:layout_above="@+id/startTime"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="21dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageviewMediaAlbum"
        android:layout_alignEnd="@+id/imageviewMediaAlbum"
        android:id="@+id/linearLayout"
        android:layout_alignLeft="@+id/imageviewMediaAlbum"
        android:layout_alignStart="@+id/imageviewMediaAlbum"
        android:gravity="center_horizontal">

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@android:drawable/ic_media_ff"
    android:id="@+id/media_fforward"
    android:contentDescription="@string/spotify_media_fforward" />

        <ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@android:drawable/ic_media_play"
    android:id="@+id/media_play"
            android:contentDescription="@string/spotify_media_play" />
<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@android:drawable/ic_media_rew"
    android:id="@+id/media_rewind"
    android:contentDescription="@string/spotify_media_rewind" />


    </LinearLayout>
</RelativeLayout>